Rearranging file system

--- a/2-data-stream/c_preprocess_data/CP_preprocessing.ipynb
+++ b/2-data-stream/c_preprocess_data/CP_preprocessing.ipynb
@@ -43,7 +43,12 @@
     "## stream the data, bit by bit (it is precombined, a combo of faker data + test data)\n",
     "\n",
     "# collect from a kaftka producer \n",
-    "\n"
+    "\n",
+    "# google api \n",
+    "\n",
+    "# watoomi data - 1000 rows of each per 30 seconds \n",
+    "# TstIdTr.pkl\n",
+    "# TstIdTr_synth.pkl\n"
    ]
   },
   {
@@ -59,7 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Categorical features\n",
     "categorical_features = [\n",
     "    'ProductCD',\n",
@@ -78,16 +82,49 @@
     "numerical_features = [\n",
     "    col for col in trIdTr.columns if col not in categorical_features + ['TransactionID', 'isFraud']\n",
     "\n",
-    "    # categorical\n",
+    "       # categorical\n",
     "\n",
     "## label encoding for all categorical features \n",
     "## set all categories as categorical pandas format\n",
     "\n",
-    "# Label Encoding for all categorical features\n",
+    "# # Label Encoding for all categorical features\n",
+    "# for col in categorical_features:\n",
+    "#     if trIdTr[col].dtype == 'object' or col in categorical_features:\n",
+    "#         le = LabelEncoder()\n",
+    "#         trIdTr[col] = le.fit_transform(trIdTr[col].astype(str))\n",
+    "\n",
+    "\n",
+    "# Assuming label encoders for categorical features were saved during training\n",
     "for col in categorical_features:\n",
-    "    if trIdTr[col].dtype == 'object' or col in categorical_features:\n",
-    "        le = LabelEncoder()\n",
-    "        trIdTr[col] = le.fit_transform(trIdTr[col].astype(str))\n",
+    "    le = LabelEncoder()\n",
+    "    # Fit encoder on training data and apply to test data\n",
+    "    le.fit(trIdTr[col])  # Assuming `trIdTr[col]` is from the training set\n",
+    "    test_data[col] = le.transform(test_data[col].astype(str))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Don't perform target encoding during testing; use the target-encoded features stored during training.\n",
+    "\n",
+    "# Assuming target encoding was done on training set, apply the same encoding to test data\n",
+    "for col in high_cardinality_features:\n",
+    "    test_data[f'{col}_target_enc'] = test_data[col].map(target_encoding_map)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    " \n",
     "\n",
     "# Setting all as categorical pandas format\n",
     "for col in categorical_features:\n",
