--- a/2-data-stream/a_enlarge_data_1_time/merge_test_data.ipynb
+++ b/2-data-stream/a_enlarge_data_1_time/merge_test_data.ipynb
@@ -432,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "sb_env",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
