--- a/2-data-stream/c_preprocess_data/CP_preprocessing.ipynb
+++ b/2-data-stream/c_preprocess_data/CP_preprocessing.ipynb
@@ -121,6 +121,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Feature engineering on test data (similar to training)\n",
+    "test_data['TransactionDT_days'] = test_data['TransactionDT'] // (24 * 60 * 60)\n",
+    "test_data['TransactionDT_weekday'] = test_data['TransactionDT_days'] % 7\n",
+    "test_data['TransactionDT_hour'] = (test_data['TransactionDT']//3600) % 24\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the target variable (if present in the test data)\n",
+    "test_data = test_data.drop(columns=['isFraud'], errors='ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure features in test set match with training set\n",
+    "test_data = test_data[categorical_features + numerical_features]\n",
+    "\n",
+    "\n",
+    "### validate training columns with "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "\n",
