--- a/1-model-training/classification_preprocessing/preprocess_train.ipynb
+++ b/1-model-training/classification_preprocessing/preprocess_train.ipynb
@@ -22,7 +22,9 @@
     "\n",
     "    2.2 Evaluate class imbalance\n",
     "\n",
-    "    2.3 Evaluate correlated features\n",
+    "    2.3 Evaluate feature distributions\n",
+    "\n",
+    "    2.4 Evaluate correlated features\n",
     "\n",
     "    \n",
     "3. Categorical preprocessing \n",
@@ -1896,7 +1898,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SafeBank_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
